Adicionei o target e o rel do TWP

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="projects">
             <h1>Projetos</h1>
-            <a href="https://queirozga.github.io/projeto-TW/"><p>The Witcher Project (TWP)</p></a> <!--Print do site-->
+            <a href="https://queirozga.github.io/projeto-TW/" target="_blank" rel="external"><p>The Witcher Project (TWP)</p></a> <!--Print do site-->
         </div>
         <div class="contacts">
             <h1 id="contact">Contatos</h1>
