Adicionei flex aos contatos
mexi em muitas outras coisas tbm

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -12,7 +13,7 @@
     </header>
     <main>
         <div class="hall" align="center">
-            <h2>Eae, eu me chamo</h2>
+            <h2>Olá, eu me chamo</h2>
             <h1> Gabriel Queiroz!</h1>
             <p>Auxiliar Administrativo</p>
             <a href="downloads/CV - Gabriel Henrique Queiroz Silva.pdf" download="CV - Gabriel Queiroz" type="archive/pdf"  ><button>Baixar CV</button></a> <!--Download do cv-->
@@ -26,16 +27,16 @@
         <div class="skills">
             <h1>Skills (Ou quase)</h1>
             <button>
-                <p>HTML</p>
+                <i class="fa-brands fa-html5"></i>
             </button>
             <button>
-                <p>CSS</p>
+                <i class="fa-brands fa-css3-alt"></i>
             </button>
             <button>
-                <p>Java</p>
+                <i class="fa-brands fa-java"></i>
             </button>
             <button>
-                <p>C</p>
+                <i class="fa-solid fa-c"></i>
             </button>
         </div>
         <div class="projects">
@@ -44,10 +45,38 @@
         </div>
         <div class="contacts">
             <h1 id="contact">Contatos</h1>
-            <a href="https://www.instagram.com/gaqueiroz__?igsh=MWZoZm1iZ3FsMDdjbw%3D%3D&utm_source=qr" rel="external" target="_blank">Instagram</a>
-            <a href="https://www.linkedin.com/in/gabriel-henrique-queiroz-silva-12706b351?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" rel="external" target="_blank">Linkedin</a>
-            <a href="">E-mail</a>
-            <a href="">Telefone</a>
+            <section id="icons_contact">
+                <!-- <article id="insta">
+                    <a href="https://www.instagram.com/gaqueiroz__?igsh=MWZoZm1iZ3FsMDdjbw%3D%3D&utm_source=qr" rel="external" target="_blank">
+                        <i class="fa-brands fa-square-instagram"></i>
+                    </a>
+                    <p>Instagram</p>
+                </article> -->
+                <article id="github">
+                    <a href="https://github.com/Queirozga">
+                        <i class="fa-brands fa-square-github"></i>
+                    </a>
+                    <p>Github</p>
+                </article>
+                <article id="linkedin">
+                    <a href="https://www.linkedin.com/in/gabriel-henrique-queiroz-silva-12706b351?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" rel="external" target="_blank">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                    <p>Linkedin</p>
+                </article>
+                <article id="email">
+                    <a href="mailto:bielhenri1302@gmail.com">
+                        <i class="fa-solid fa-square-envelope"></i>
+                    </a>
+                    <p>E-mail</p>
+                </article>
+                <article id="tel">
+                    <a href="https://api.whatsapp.com/send?phone=5517988092610">
+                        <i class="fa-solid fa-square-phone"></i>
+                    </a>
+                    <p>Telefone</p>
+                </article>
+            </section>
         </div>
 
 
