rapai fiz coisa em

--- a/index.html
+++ b/index.html
@@ -26,18 +26,28 @@
         </div>
         <div class="skills">
             <h1>Skills (Ou quase)</h1>
-            <button>
-                <i class="fa-brands fa-html5"></i>
-            </button>
-            <button>
-                <i class="fa-brands fa-css3-alt"></i>
-            </button>
-            <button>
-                <i class="fa-brands fa-java"></i>
-            </button>
-            <button>
-                <i class="fa-solid fa-c"></i>
-            </button>
+            <section id="icon_skills">
+                <article id="html">
+                    <button>
+                        <i class="fa-brands fa-html5"></i>
+                    </button>
+                </article>
+                <article id="css">
+                    <button>
+                        <i class="fa-brands fa-css3-alt"></i>
+                    </button>
+                </article>
+                <article id="java">
+                    <button>
+                        <i class="fa-brands fa-java"></i>
+                    </button>
+                </article>
+                <article id="c">
+                    <button>
+                        <i class="fa-brands fa-c"></i>
+                    </button>
+                </article>
+            </section>
         </div>
         <div class="projects">
             <h1>Projetos</h1>
