--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Portifólio</h1>
     </header>
     <main>
-        <div class="hall" align="center">
+        <div class="hall">
             <h2>Olá, eu me chamo</h2>
             <h1> Gabriel Queiroz!</h1>
             <p>Auxiliar Administrativo</p>
