tentei fazer algo nos projects

--- a/index.html
+++ b/index.html
@@ -51,7 +51,19 @@
         </div>
         <div class="projects">
             <h1>Projetos</h1>
-            <a href="https://queirozga.github.io/projeto-TW/" target="_blank" rel="external"><p>The Witcher Project (TWP)</p></a> <!--Print do site-->
+            <section id="twp">
+                <article>
+                    <h2 id="title_twp">The Witcher Project (TWP)</h2>
+                </article>
+                <article>
+                    <p id="text_twp"> Projeto sobre o jogo The Witcher, feito com html e css.</p>
+                </article>
+                <article>
+                    <a href="https://queirozga.github.io/projeto-TW/" target="_blank">
+                    <button id="see">Ver projeto</button>
+                                </a>
+                </article>
+            </section>
         </div>
         <div class="contacts">
             <h1 id="contact">Contatos</h1>
