--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
     </header>
     <main>
         <div class="hall">
+            <section id="gabriel">
             <h2>Olá, eu me chamo</h2>
-            <h1> Gabriel Queiroz!</h1>
-            <p>Auxiliar Administrativo</p>
-            <a href="downloads/CV - Gabriel Henrique Queiroz Silva.pdf" download="CV - Gabriel Queiroz" type="archive/pdf"  ><button>Baixar CV</button></a> <!--Download do cv-->
-            <a href="#contact"><button>Contatos</button></a>  <!--link pro final do site-->
-            <img src="" alt="Foto de Gabriel Queiroz"> <!--Foto minha-->
+                <h1> Gabriel Queiroz!</h1>
+                <p>Auxiliar Administrativo</p>
+                <a href="downloads/CV - Gabriel Henrique Queiroz Silva.pdf" download="CV - Gabriel Queiroz" type="archive/pdf"  ><button>Baixar CV</button></a> <!--Download do cv-->
+                <a href="#contact"><button>Contatos</button></a>  <!--link pro final do site-->
+            </section>
+            <section id="photo"><img src="" alt="Foto de Gabriel Queiroz"> <!--Foto minha--></section>
         </div>
         <div class="about_me">
             <h1>Quem é esse cara?</h1>
-            <p>Estudante de Sistemas de Informação na FEF, Auxiliar Administrativo na APAE de Fernandópolis e amante da programação. Quando não estou pensando em programação estou estudando programação, simplesmente adoro tudo isso e no momento estou focado em Html e Css.</p>
+            <p>Estudante de Sistemas de Informação na FEF, Auxiliar Administrativo na APAE de Fernandópolis e amante da programação. Quando não estou pensando em programação estou estudando programação, simplesmente adoro tudo isso e no momento estou focado em HTML CSS.</p>
         </div>
         <div class="skills">
             <h1>Skills (Ou quase)</h1>
@@ -52,17 +54,11 @@
         <div class="projects">
             <h1>Projetos</h1>
             <section id="twp">
-                <article>
-                    <h2 id="title_twp">The Witcher Project (TWP)</h2>
-                </article>
-                <article>
-                    <p id="text_twp"> Projeto sobre o jogo The Witcher, feito com html e css.</p>
-                </article>
-                <article>
-                    <a href="https://queirozga.github.io/projeto-TW/" target="_blank">
-                    <button id="see">Ver projeto</button>
-                                </a>
-                </article>
+                <h2 id="title_twp">TWP</h2>
+                <p id="text_twp"> Projeto sobre o jogo The Witcher, feito com HTML e CSS.</p>
+                <a href="https://queirozga.github.io/projeto-TW/" target="_blank">
+                    <button class="see">Ver projeto</button>
+                </a>
             </section>
         </div>
         <div class="contacts">
