--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="about_me">
             <h1>Quem é esse cara?</h1>
-            <p>Estudante de Sistemas de Informação na FEF, Auxiliar Administrativo na APAE de Fernandópolis e amante da programação. Quando não estou pensando em programação estou estudando programação, simplesmente adoro tudo isso e no momento estou focado em HTML CSS.</p>
+            <p>Estudante de Sistemas de Informação na Fundação Educacional de Fernandópolis, Auxiliar Administrativo na APAE de Fernandópolis. No momento estou focado em HTML CSS, porém sempre estou em busca de novos aprendizados nessa área.</p>
         </div>
         <div class="skills">
             <h1>Skills (Ou quase)</h1>
