tentei e tentei e no fim n fiz nd

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                     <button>
                         <i class="fa-brands fa-html5"></i>
                     </button>
+                    <!--<p class="html_description">Passe o mouse para ler.</p>-->
                 </article>
                 <article id="css">
                     <button>
