atualizei os links p blank e mudei o projeto
press f for twp (abandonei)

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <div class="projects">
             <h1>Projetos</h1>
             <section id="twp">
-                <h2 id="title_twp">TWP</h2>
-                <p id="text_twp"> Projeto sobre o jogo The Witcher, feito com HTML e CSS.</p>
-                <a href="https://queirozga.github.io/projeto-TW/" target="_blank">
+                <h2 id="title_twp">Cordel</h2>
+                <p id="text_twp"> Um cordel ("poema" nordestino) feito em HTML e CSS com responsividade básica e efeito parallax em fotos.</p>
+                <a href="https://queirozga.github.io/cordel/" target="_blank">
                     <button class="see">Ver projeto</button>
                 </a>
             </section>
@@ -72,25 +72,25 @@
                     <p>Instagram</p>
                 </article> -->
                 <article id="github">
-                    <a href="https://github.com/Queirozga">
+                    <a href="https://github.com/Queirozga" rel="author" target="_blank">
                         <i class="fa-brands fa-square-github"></i>
                     </a>
                     <p>Github</p>
                 </article>
                 <article id="linkedin">
-                    <a href="https://www.linkedin.com/in/gabriel-henrique-queiroz-silva-12706b351?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" rel="external" target="_blank">
+                    <a href="https://www.linkedin.com/in/gabriel-henrique-queiroz-silva-12706b351?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" rel="author" target="_blank">
                         <i class="fa-brands fa-linkedin"></i>
                     </a>
                     <p>Linkedin</p>
                 </article>
                 <article id="email">
-                    <a href="mailto:bielhenri1302@gmail.com">
+                    <a href="mailto:bielhenri1302@gmail.com" rel="author" target="_blank">
                         <i class="fa-solid fa-square-envelope"></i>
                     </a>
                     <p>E-mail</p>
                 </article>
                 <article id="tel">
-                    <a href="https://api.whatsapp.com/send?phone=5517988092610">
+                    <a href="https://api.whatsapp.com/send?phone=5517988092610" rel="author" target="_blank">
                         <i class="fa-solid fa-square-phone"></i>
                     </a>
                     <p>Telefone</p>
@@ -102,7 +102,7 @@
     </main>
     <footer>
         <p>Trabalho de Design de Interface</p>
-        <p>Professor Welingtom</p>
+        <p>Professor: Welingthon</p>
     </footer>
 </body>
 </html>
