adicionei um iframe do projeto cordel

--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
             <section id="twp">
                 <h2 id="title_twp">Cordel</h2>
                 <p id="text_twp"> Um cordel ("poema" nordestino) feito em HTML e CSS com responsividade básica e efeito parallax em fotos.</p>
-                <a href="https://queirozga.github.io/cordel/" target="_blank">
-                    <button class="see">Ver projeto</button>
-                </a>
+                <article id="cordel_pai">
+                    <iframe id="cordel" src="https://queirozga.github.io/cordel/" frameborder="0" scrolling="no"></iframe>
+                </article>
+                <a href="https://queirozga.github.io/cordel/" target="_blank">Ver projeto</a>
             </section>
         </div>
         <div class="contacts">
