--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
         <div class="container_hall">
             <div class="hello">
                 <h2>Olá, eu me chamo</h2>
-                    <h1> Gabriel Queiroz!</h1>
-                    <p>Auxiliar Administrativo</p>
+                <h1> Gabriel Queiroz!</h1>
+                <p>Auxiliar Administrativo</p>
                     <div class="buttons">
                         <a href="downloads/CV - Gabriel Henrique Queiroz Silva.pdf" download="CV - Gabriel Queiroz" type="archive/pdf"  ><button class="cv">Baixar CV</button></a>
                         <a href="#contact"><button  class="go_contacts">Contatos</button></a>
                     </div>  <!--link pro final do site-->
                 </div>
-                    <!--<section class="photo">
-                        <img src="imagens/eu.jfif" alt="Foto de Gabriel Queiroz">-->
             </section>
         </div>
         <section class="container_about_me">
@@ -85,7 +83,7 @@
                     <p>Linkedin</p>
                 </article>
                 <article class="email">
-                    <a href="mailto:bielhenri1302@gmail.com" rel="author" target="_blank">
+                    <a href="mailto:queirozgabrielhs@gmail.com" rel="author" target="_blank">
                         <i class="fa-solid fa-square-envelope"></i>
                     </a>
                     <p>E-mail</p>
