--- a/index.html
+++ b/index.html
@@ -24,41 +24,30 @@
                 </div>
             </section>
         </div>
-        <section class="container_about_me">
-            <div class="about_me">
-                <h1>Quem é esse cara?</h1>
-                <p>Estudante de Sistemas de Informação na FEF, Auxiliar Administrativo na APAE de Fernandópolis e Estágiário na Easify. No momento estou focado em HTML, CSS e JavaScript porém sempre estou em busca de novos aprendizados nessa área.</p>
+            <div class="container_about_me">
+                <h1 class="about_me_title">Quem é esse cara?</h1>
+                <p class="about_me_text">Estudante de Sistemas de Informação na FEF, Auxiliar Administrativo na APAE de Fernandópolis e Estágiário na Easify. No momento estou focado em HTML, CSS e JavaScript porém sempre estou em busca de novos aprendizados nessa área.</p>
             </div>
-        </section>
         <div class="skills">
             <h1>Skills (Ou quase)</h1>
             <section id="icon_skills">
-                <article id="html">
-                    <button>
-                        <i class="fa-brands fa-html5"></i>
-                    </button>
-                    <!--<p class="html_description">Passe o mouse para ler.</p>-->
-                </article>
-                <article id="css">
-                    <button>
-                        <i class="fa-brands fa-css3-alt"></i>
-                    </button>
-                </article>
-                <article id="java">
-                    <button>
-                        <i class="fa-brands fa-java"></i>
-                    </button>
-                </article>
-                <article id="c">
-                    <button>
-                        <i class="fa-brands fa-c"></i>
-                    </button>
-                </article>
+                <button  id="icons">
+                    <i class="fa-brands fa-html5"></i>
+                </button>
+                <button id="icons">
+                    <i class="fa-brands fa-css3-alt"></i>
+                </button>
+                <button id="icons">
+                    <i class="fa-brands fa-java"></i>
+                </button>
+                <button id="icons">
+                    <i class="fa-brands fa-c"></i>
+                </button>
             </section>
         </div>
         <div class="projects">
             <h1>Projetos</h1>
-            <section id="twp">
+            <section id="cordel_box">
                 <h2 id="title_cordel">Cordel</h2>
                 <p id="text_cordel"> Um cordel ("poema" nordestino) feito em HTML e CSS com responsividade básica e efeito parallax em fotos.</p>
                 <article id="cordel_pai">
