--- a/index.html
+++ b/index.html
@@ -18,16 +18,26 @@
                 <h1> Gabriel Queiroz!</h1>
                 <p>Auxiliar Administrativo</p>
                     <div class="buttons">
-                        <a href="downloads/CV - Gabriel Henrique Queiroz Silva.pdf" download="CV - Gabriel Queiroz" type="archive/pdf"  ><button class="cv">Baixar CV</button></a>
+                        <a href="downloads/CV - Gabriel Henrique Queiroz Silva.pdf" download="CV - Gabriel Queiroz" type="archive/pdf"  >
+                            <button class="cv">Baixar CV</button>
+                        </a>
                         <a href="#contact"><button  class="go_contacts">Contatos</button></a>
                     </div>  <!--link pro final do site-->
                 </div>
             </section>
         </div>
-            <div class="container_about_me">
-                <h1 class="about_me_title">Quem é esse cara?</h1>
-                <p class="about_me_text">Estudante de Sistemas de Informação na FEF, Auxiliar Administrativo na APAE de Fernandópolis e Estágiário na Easify. No momento estou focado em HTML, CSS e JavaScript porém sempre estou em busca de novos aprendizados nessa área.</p>
-            </div>
+            <section class="about_me">
+                <div class="container_about_me">
+                    <h1 class="about_me_title">Quem é esse cara?</h1>
+                    <p class="about_me_text">
+                        Estudante de Sistemas de Informação na FEF,
+                        Auxiliar Administrativo na APAE de Fernandópolis
+                        e Estágiário na Easify. No momento estou focado
+                        em HTML, CSS e JavaScript porém sempre estou em
+                        busca de novos aprendizados nessa área.
+                    </p>
+                </div>
+            </section>
         <div class="skills">
             <h1>Skills (Ou quase)</h1>
             <section id="icon_skills">
