--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/tablet.css">
+    <link rel="stylesheet" href="css/phone.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -15,21 +17,20 @@
         <div class="container_hall">
             <div class="hello">
                 <h2>Olá, eu me chamo</h2>
-                <h1> Gabriel Queiroz!</h1>
+                <h1>Gabriel Queiroz!</h1>
                 <p>Auxiliar Administrativo</p>
-                    <div class="buttons">
-                        <a href="downloads/CV - Gabriel Henrique Queiroz Silva.pdf" download="CV - Gabriel Queiroz" type="archive/pdf"  >
-                            <button class="cv">Baixar CV</button>
-                        </a>
-                        <a href="#contact"><button  class="go_contacts">Contatos</button></a>
-                    </div>  <!--link pro final do site-->
-                </div>
-            </section>
+            <div  class="buttons">
+                <a href="downloads/CV - Gabriel Henrique Queiroz Silva.pdf" download="CV - Gabriel Queiroz" type="archive/pdf"  >
+                    <button class="cv">Baixar CV</button>
+                </a>
+                <a href="#contact"><button  class="go_contacts">Contatos</button></a>
+            </div>  <!--link pro final do site-->
+            </div>
         </div>
             <section class="about_me">
                 <div class="container_about_me">
-                    <h1 class="about_me_title">Quem é esse cara?</h1>
-                    <p class="about_me_text">
+                    <h1>Quem é esse cara?</h1>
+                    <p>
                         Estudante de Sistemas de Informação na FEF,
                         Auxiliar Administrativo na APAE de Fernandópolis
                         e Estágiário na Easify. No momento estou focado
