Media query tablet completo

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
             <div class="hello">
                 <h2>Olá, eu me chamo</h2>
                 <h1>Gabriel Queiroz!</h1>
-                <p>Auxiliar Administrativo</p>
+                <p>Auxiliar Administrativo e Estágiário</p>
+            </div>
             <div  class="buttons">
                 <a href="downloads/CV - Gabriel Henrique Queiroz Silva.pdf" download="CV - Gabriel Queiroz" type="archive/pdf"  >
-                    <button class="cv">Baixar CV</button>
+                    <button class="cv">Currículo</button>
                 </a>
                 <a href="#contact"><button  class="go_contacts">Contatos</button></a>
             </div>  <!--link pro final do site-->
-            </div>
         </div>
-            <section class="about_me">
-                <div class="container_about_me">
+            <section class="container_about_me">
+                <div class="about_me">
                     <h1>Quem é esse cara?</h1>
                     <p>
                         Estudante de Sistemas de Informação na FEF,
@@ -64,7 +64,7 @@
                 <article id="cordel_pai">
                     <iframe id="cordel" src="https://queirozga.github.io/cordel/" frameborder="0" scrolling="no"></iframe>
                 </article>
-                <a href="https://queirozga.github.io/cordel/" target="_blank">Ver projeto</a>
+                <a href="https://queirozga.github.io/cordel/" target="_blank"><button>Ver projeto</button></a>
             </section>
         </div>
         <div class="contacts">
@@ -74,7 +74,7 @@
                     <a href="https://github.com/Queirozga" rel="author" target="_blank">
                         <i class="fa-brands fa-square-github"></i>
                     </a>
-                    <p>Github</p>
+                        <p>Github</p>
                 </article>
                 <article class="linkedin">
                     <a href="https://www.linkedin.com/in/gabriel-henrique-queiroz-silva-12706b351?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" rel="author" target="_blank">
